fixing some typos

--- a/task3.ipynb
+++ b/task3.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define some useful operators and functions. These include some straightforward tools like the 2x2 identity matrix, $CX$ gate matrix, functions for multiple tensor products, non-adjacent $CX$ gates, and the parameterized single-qubit unitary given in the task. They also include nontrivial functions which implement an controlled $k$th-root-pauli $X$ gate, as well as its hermitian conjugate. This implementation is based on the following construction from [1]:\n",
+    "Next, we define some useful operators and functions. These include some straightforward tools like the 2x2 identity matrix, $CX$ gate matrix, functions for multiple tensor products, non-adjacent $CX$ gates, and the parameterized single-qubit unitary given in the task. They also include nontrivial functions which implement a controlled $k$ th-root-pauli $X$ gate, as well as its hermitian conjugate. This implementation is based on the following construction from [1]:\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
@@ -273,7 +273,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "In this case, we require that $V^4 = U = X $, so the $CV$s  here will be $C\\sqrt[4]{X}$ s. Again, we use our contrusction for arbitrary controlled- $k$ th-root-X gates to implement these. We also verify yet again that the operator 2-norm of the difference between our construction and the true value is very small."
+    "In this case, we require that $V^4 = U = X $, so the $CV$ s  here will be $C\\sqrt[4]{X}$ s. Again, we use our contrusction for arbitrary controlled- $k$ th-root-X gates to implement these. We also verify yet again that the operator 2-norm of the difference between our construction and the true value is very small."
    ]
   },
   {
@@ -330,7 +330,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "Here, we require again $V^2 = U = X$, i.e. $V = \\sqrt{X}$. The first and third timesteps can be implemented more or less the same as they were for $CCX$, with the krx() function. For the $n-1$ -controlled nots and $V$ s, we will require some recursive function, which can implement either $-$ meaning it must be able to specify an arbitrary root of $X$, $k$. Moreover, given that the two  $n-1$ -controlled nots do not act on the same qubit as the $n-1$ -controlled $V$, these function must also specify a target qubit, which we call $j$. Such a function is implemented as **CnrX(n, k, j)**. The base case for this recursive function is $n = 1$, a $CNOT$ gate. To use it specifically for n-controlled-nots, we define a wrapper function **CnX(n)** which applies the \"first root\" of $X$ (i.e. $X$ itself) to the $n+1$ th qubit, conditioned on the first $n$ qubits."
+    "Here, we require again $V^2 = U = X$, i.e. $V = \\sqrt{X}$. The first and third timesteps can be implemented more or less the same as they were for $CCX$, with the krx() function. For the $n-1$ -controlled nots and $V$ s, we will require some recursive function, which can implement either $-$ meaning it must be able to specify an arbitrary root of $X$, $k$. Moreover, given that the two  $n-1$ -controlled nots do not act on the same qubit as the $n-1$ -controlled $V$, these functions must also specify a target qubit, which we call $j$. Such a function is implemented as **CnrX(n, k, j)**. The base case for this recursive function is $n = 1$, a $CNOT$ gate. To use it specifically for n-controlled-nots, we define a wrapper function **CnX(n)** which applies the \"first root\" of $X$ (i.e. $X$ itself) to the $n+1$ th qubit, conditioned on the first $n$ qubits."
    ]
   },
   {
@@ -442,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While still negible up to 10-controlled-nots, we can see that there looks to be exponential growth in the error. This warrants some further analysis. If we extrapolate based on this data, we get some idea of how large of system sizes we could simulate with trivial norm errors."
+    "While still negible up to 10-controlled-nots, that there looks to be exponential growth in the error. This warrants some further analysis. If we extrapolate based on these data, we get some idea of the size of the systems for which we could simulate the gates with trivial norm errors."
    ]
   },
   {
